--- a/README.adoc
+++ b/README.adoc
@@ -3,7 +3,17 @@ Standalone repository for the _'catalog-service_'.
 Keeps the same code as Thomas Vitale Book Spring Cloud Native but in my own format. He uses Gradle in the _git_ repository, but I use Maven instead. 
 
 The book reference follows:
-https://www.manning.com/books/cloud-native-spring-in-action[Cloud Native Spring in Action^] book
-by https://www.thomasvitale.com[Thomas Vitale^].
+https://www.manning.com/books/cloud-native-spring-in-action[Cloud Native Spring in Action^] book by https://www.thomasvitale.com[Thomas Vitale^].
 
+[source,bash]
+----
+$ mvn spring-bood:buildImage <1>
+$./gradlew bootBuildImage <2>
+----
+<1> Maven
+<2> Gradle
 
+[source,bash]
+----
+$ docker run --rm --name catalog-service -p 8080:8080 catalog-service:2023.1.0
+----
