--- a/README.adoc
+++ b/README.adoc
@@ -10,6 +10,7 @@ https://www.manning.com/books/cloud-native-spring-in-action[Cloud Native Spring 
 $ mvn spring-bood:buildImage <1>
 $./gradlew bootBuildImage <2>
 ----
+
 <1> Maven
 <2> Gradle
 
@@ -34,6 +35,7 @@ $ kubectl get deployment
 ----
 
 To check pods
+
 [source,bash]
 ----
 $ kubectl get pod
@@ -46,16 +48,22 @@ You can check the application logs by running
 $ kubectl logs deployment/catalog-service
 ----
 
-By default, applications running in _Kubernetes_ are not accessible. To enable it, run the following command.
+By default, applications running in _Kubernetes_ are not accessible.
+To enable it, run the following command.
+
+[NOTE]
+====
+The Catalog Service is listening in port 8080, so to expose the deployment service with the following command you use 8080 port.
+====
 
 [source,bash]
 ----
-$ kubectl expose deployment catalog-service --name=catalog-service --port=8010
+$ kubectl expose deployment catalog-service --name=catalog-service --port=8080
 ----
 
-To verify the service is exposed
+To verify the service is exposed.
 
-[source, bash]
+[source,bash]
 ----
 $ kubectl get service catalog-service
 ----
@@ -64,11 +72,10 @@ Last thing to do is forward the traffic to the service.
 
 [source,bash]
 ----
-$ kubectl port-forward service/catalog-service 7000:8010
+$ kubectl port-forward service/catalog-service 8000:8080
 ----
 
-Now if you need to remove everthing so far.
-
+Now if you need to remove everything so far.
 
 [source,bash]
 ----
@@ -79,3 +86,12 @@ $ kubectl delete deployment catalog-service
 ----
 $ kubectl delete service catalog-service
 ----
+
+Now to check that the service is running as expected, use the following cURL/HTTPie
+
+[source,bash]
+----
+$ curl --request GET --url http://127.0.0.1:8000/api/v1/home
+$ http GET http://127.0.0.1:8000/api/v1/home
+----
+
