--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,12 @@
 = csoftz-polarbookstore-catalog-service
-Standalone repository for the _'catalog-service_'. 
+
+Standalone repository for the _'catalog-service_'.
 Keeps the same code as Thomas Vitale Book Spring Cloud Native but in my own format. He uses Gradle in the _git_ repository, but I use Maven instead. 
 
 The book reference follows:
 https://www.manning.com/books/cloud-native-spring-in-action[Cloud Native Spring in Action^] book by https://www.thomasvitale.com[Thomas Vitale^].
+
+Provides functionality for managing the books in the catalog.
 
 [source,bash]
 ----
